[project]
name = "agentsunderthehood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
]
