[project]
name = "langchain-searchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]
