[project]
name = "reactagentexecutor-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
]
